Revert "- hot fix for track knob on mobile devices"
This reverts commit b725c3944a9abc57559e924d6cdc528dda6588b7.

--- a/src/app/themes/volumio/volumio-style.scss
+++ b/src/app/themes/volumio/volumio-style.scss
@@ -434,13 +434,9 @@ li.list-group-item {
 //Knob
 .knobWrapper {
   position: relative;
-  margin: 0px auto 15px auto;
   width: 210px;
   height: 210px;
-  @include breakpoint(xs) {
-    width: 186px;
-    height: 186px;
-  }
+  margin: 0px auto 15px auto;
 }
 
 .knob {
